--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,13 +16,15 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^12.8.0",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "swr": "^2.3.3",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
