--- a/apps/backend/public/package.json
+++ b/apps/backend/public/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc && cp package.json dist/ && cp -r prisma dist/",
+    "build": "tsc && mkdir -p public && cp -r dist/* public/ && cp package.json public/",
     "start": "node dist/index.js",
     "test": "bun test",
     "lint": "eslint . --ext .ts",
