--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc && cp package.json dist/ && cp -r prisma dist/",
+    "build": "./build.sh",
+    "postbuild": "cp package.json dist/ && cp -r prisma dist/ && cp .env dist/ || true",
     "start": "node dist/index.js",
     "test": "bun test",
     "lint": "eslint . --ext .ts",
