--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,16 +5,12 @@
   "scripts": {
     "dev": "nodemon",
     "build": "./build.sh",
-    "postbuild": "cp package.json dist/ && cp -r prisma dist/ && cp .env dist/ || true",
     "start": "node dist/index.js",
     "test": "bun test",
     "lint": "eslint . --ext .ts",
-    "format": "prettier --write \"**/*.{ts,json}\"",
-    "migrate": "prisma migrate dev",
-    "generate": "prisma generate"
+    "format": "prettier --write \"**/*.{ts,json}\""
   },
   "dependencies": {
-    "@prisma/client": "^5.10.2",
     "@sophon/shared": "workspace:*",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -37,7 +33,6 @@
     "eslint-plugin-prettier": "^5.1.3",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
-    "prisma": "^5.10.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
