chore: fix build

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write \"**/*.{ts,json}\""
   },
   "dependencies": {
-    "@sophon/shared": "workspace:*",
+    "@sophon/shared": "0.1.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
