--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "dev": "turbo run dev",
-    "build": "turbo run build",
+    "build": "./build.sh",
     "start": "turbo run start",
     "lint": "turbo run lint",
     "format": "turbo run format",
